// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Show user empty info at the page 1`] = `
<main>
  <Connect(Header) />
  <div
    className="jumbotron"
  >
    <p
      className="lead"
    >
       
      <FormattedMessage
        id="user.title"
        values={Object {}}
      />
       
    </p>
    <p>
      <FormattedMessage
        id="user.username"
        values={Object {}}
      />
       
    </p>
    <p>
      <FormattedMessage
        id="user.email"
        values={Object {}}
      />
       
    </p>
    <p>
      <FormattedMessage
        id="user.avatar"
        values={Object {}}
      />
    </p>
    <p>
      <FormattedMessage
        id="user.no_avatar"
        values={Object {}}
      />
    </p>
    <Link
      className="btn btn-primary"
      replace={false}
      to="/user/undefined/edit"
    >
      <FormattedMessage
        id="user.edit_user_data"
        values={Object {}}
      />
    </Link>
  </div>
</main>
`;

exports[`Show user get info at the page 1`] = `
<main>
  <Connect(Header) />
  <div
    className="jumbotron"
  >
    <p
      className="lead"
    >
       
      <FormattedMessage
        id="user.title"
        values={Object {}}
      />
       
    </p>
    <p>
      <FormattedMessage
        id="user.username"
        values={Object {}}
      />
       
      Boiler
    </p>
    <p>
      <FormattedMessage
        id="user.email"
        values={Object {}}
      />
       
      example@boiler.com
    </p>
    <p>
      <FormattedMessage
        id="user.avatar"
        values={Object {}}
      />
    </p>
    <p>
      <FormattedMessage
        id="user.no_avatar"
        values={Object {}}
      />
    </p>
    <Link
      className="btn btn-primary"
      replace={false}
      to="/user/undefined/edit"
    >
      <FormattedMessage
        id="user.edit_user_data"
        values={Object {}}
      />
    </Link>
  </div>
</main>
`;
